<resources>
    <string name="app_name">Tour De Breda</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">"Automatically download attachments for incoming emails     "</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_name_map">Map</string>
    <string name="navigation_name_locations">Locations</string>
    <string name="navigation_name_help">Help</string>
    <string name="navigation_name_settings">Settings</string>
    <string name="help_title">Help</string>
    <string name="settings_language" translatable="false">Language</string>
    <string name="settings_colorblind" translatable="false">Colorblind mode</string>
    <string name="name_main_activity" translatable="false">Home</string>
    <string name="name_help_activity" translatable="false">Help</string>
    <string name="name_map_activity" translatable="false">Map</string>
    <string name="name_poi_activity" translatable="false">POI</string>
    <string name="name_settings_activity" translatable="false">Settings</string>
    <string name="settings_language_id">Language</string>

    <string name="preference_id" translatable="false">preference</string>
    <string name="preferences_database_loaded" translatable="false">databaseLoaded</string>

    <string-array name="settings_availableLanguages">
        <item>English</item>
        <item>Nederlands</item>
        <item>Deutsch</item>
    </string-array>
    <string name="settings_language_defaultLanguage">English</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_colorblind_id">Colorblind</string>
    <string name="settings_satellite_id">Satellite</string>
    <string name="settings_satellite_title">Satellite view</string>
    <string name="settings_all_waypoints_visible_id" translatable="false">Waypoint</string>
    <string name="settings_all_waypoints_visible_title">All waypoints visible</string>

    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="geofence_transition_invalid_type" translatable="false">Geofencing of wrong type</string>
    <string name="waypoint_visited" translatable="false">You found a waypoint!</string>
    <string name="settings_colorblind_title">ColorBlind Mode</string>



</resources>
