<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_location_black_24dp"
        android:checkable="false"
        android:title="@string/navigation_name_map" />
    <item
        android:id="@+id/navigation_locations"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:checkable="false"
        android:title="@string/navigation_name_locations" />
    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:checkable="false"
        android:title="@string/navigation_name_help" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:checkable="false"
        android:title="@string/navigation_name_settings" />
</menu>